# build-your-own-chatbot

./: .gitignore  CHANGELOG.md  Concept_Agenda.md  README.md  TODO.md  Workshop.md  Workshop_Agena.md  Workshop_Timeline.md  custom_clone.sh  custom_update.sh  docker-compose.yml  ideas.md  link_collection.md  notes.txt  pyproject.toml
.devcontainer/: devcontainer.json
Introduction/: install_prerequisites_jetson_nano.md  install_prerequisites_jetson_nano.sh  prerequisites.md  setup_internet_connection_via_openvpn_de.md  startup_dev_env.md
Session 1/code/: deploy_model.md
Session_1/code/: 01_deploy_model.md  02_tasks.ipynb  03_solutions.ipynb  deploy_model.md  thunder-collection_Workshop_Collection_API_Calls.json  use_model.ipynb  your_experiments.ipynb
Session_2/code/: 01_tasks.ipynb  02_solutions.ipynb
Session_3/code/: 01_deploy_chromadb.md  01_tasks.ipynb  02_tasks.ipynb  03_solutions.ipynb
Session_4/code/: 01_tasks.ipynb  02_solutions.ipynb
Session_5/chatbot/: docker-compose-jetson.yml  docker-compose.yml  run_chatbot_app.md
Session_5/chatbot/frontend/: Dockerfile.frontend  app.py  pyproject.toml
Session_5/chatbot_solutiom/: docker-compose-jetson.yml  docker-compose.yml
Session_5/chatbot_solution/: README_CHATBOT.md  docker-compose-jetson.yml  docker-compose.yml  run_ollama.sh
Session_5/chatbot_solution_new/: docker-compose-jetson.yml  docker-compose.yml
Session_5/chatbot_task/: README_CHATBOT.md  docker-compose-jetson.yml  docker-compose.yml
Session_5/chatbot_task_old/: README_CHATBOT.md  (+1 more)
Workshop_PP_Slides_solution/: Introduction Slides.pptx
(+34 files in other folders)
