[project]
name = "frontend"
version = "1.0.0"
description = "Gradio frontend for Chatbot interface"
authors = [
    { name = "Max", email = "Max@example-project-with-rye.com" }
]
dependencies = [
"gradio>=4.43.0"
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye]
managed = true
universal = true
virtual = true # for docker, see https://rye.astral.sh/guide/docker/
dev-dependencies = [
    "pre-commit>=3.7.1",
    "pytest>=8.2.2",
    "pyright>=1.1.370",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 160  # widescreen monitor support :)
target-version = "py311"
# can be upgraded to 3.12 for e.g. nested quotes in f-strings.
# That requires all team members to use Python 3.12.

[tool.pytest.ini_options]
# https://pytest.org/en/7.3.x/explanation/goodpractices.html#which-import-mode
addopts = ["--import-mode=importlib", ]
pythonpath = "src"
